[package]
name = "safedotenv"
version = "0.1.0"
authors = ["gbaranski <root@gbaranski.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2"
structopt = "0.3.21"
human-panic = "1.0.3"
deque = "0.3.2"
num_cpus = "1.13.0"
ignore = "0.4.17"
simplelog = "0.9.0"
log = "0.4.14"
rayon = "1.5.0"
aho-corasick = "0.7.15"
