[package]
name = "safedotenv"
version = "0.1.0"
authors = ["gbaranski <root@gbaranski.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2"
structopt = "0.3.21"
ignore = "0.4.17"
aho-corasick = "0.7.15"
